--- a/_config.yml
+++ b/_config.yml
@@ -33,19 +33,19 @@ author:
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com/citations?hl=en&user=HHUSK_oAAAAJ&view_op=list_works&sortby=pubdate"
-  impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  #impactstory      : # URL
+  orcid            : "https://orcid.org/0000-0003-1387-6784"
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  researchgate     : # URL
+  #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  #researchgate     : # URL
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "irfanbabar42"
   kaggle           : # Username  
-  stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
+  stackoverflow    : "irfanbabar42"   
 
   # Social media
   bluesky          : "bsky.app" # Replace this with you Bluesky username
@@ -65,7 +65,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : # Username for X / Twitter
+  twitter          : "irfanbabar2"
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
