--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : &name
+title                    : &name "Your Website"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
