--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : &name "Your Website"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://irfanbabar42.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "/images/irfan.jpeg"
+  avatar           : "irfan.jpeg"
   name             : "Muhammad Irfan"
   pronouns         : # example: "she/her"  
   bio              : "Ph.D. Computer Science Engineering Scholar at HBKU, Doha, Qatar."
