--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : &name "Your Website"
+title                    : "Muhammad Irfan"
 title_separator          : "-"
-name                     : &name "Your Name"
+name                     : &name "Muhammad Irfan"
 description              : &description "personal description"
 url                      : https://irfanbabar42.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
