--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author:
   # Biographic information
   avatar           : "irfan.jpeg"
   name             : "Muhammad Irfan"
-  pronouns         : # example: "she/her"  
+  pronouns         : he/him # example: "she/her"  
   bio              : "Ph.D. Computer Science Engineering Scholar at HBKU, Doha, Qatar."
   location         : "Doha, Qatar"
   employer         : "Hamad Bin Khalifa University"
